--- a/renovate.json5
+++ b/renovate.json5
@@ -1,4 +1,5 @@
 {
+  // BigBang shared preset – base config, labels, and shared scripts
   "extends": [
     "local>platform-one/big-bang/pipeline-templates/renovate-runner"
   ],
@@ -18,42 +19,22 @@
   ],
   "customManagers": [
     {
-      "customType": "regex",
-      "description": "Update chart version to match upstream; append -bb.0",
-      "managerFilePatterns": [
-        "/^chart/Chart\\.yaml$/"
-      ],
-      "matchStrings": [
-        "version:\\s+(?<currentValue>.+)-bb\\.\\d+"
-      ],
-      "autoReplaceStringTemplate": "version: {{newValue}}-bb.0",
-      "depNameTemplate": "base",
-      "datasourceTemplate": "helm",
-      "registryUrlTemplate": "https://istio-release.storage.googleapis.com/charts"
-    },
-    {
+      // Syncs appVersion to the upstream Istio base chart release
       "customType": "regex",
       "description": "Update chart appVersion to match upstream",
-      "managerFilePatterns": [
-        "/^chart/Chart\\.yaml$/"
-      ],
-      "matchStrings": [
-        "appVersion:\\s+(?<currentValue>.+)"
-      ],
+      "managerFilePatterns": ["/^chart/Chart\\.yaml$/"],
+      "matchStrings": ["appVersion:\\s+(?<currentValue>.+)"],
       "autoReplaceStringTemplate": "appVersion: {{newValue}}",
       "depNameTemplate": "base",
       "datasourceTemplate": "helm",
       "registryUrlTemplate": "https://istio-release.storage.googleapis.com/charts"
     },
     {
+      // Keeps the bigbang.dev/applicationVersions annotation in lockstep
       "customType": "regex",
       "description": "Update big bang application versions",
-      "managerFilePatterns": [
-        "/^chart/Chart.yaml$/"
-      ],
-      "matchStrings": [
-        "- Istio:\\s+(?<currentValue>.+)"
-      ],
+      "managerFilePatterns": ["/^chart/Chart.yaml$/"],
+      "matchStrings": ["- Istio:\\s+(?<currentValue>.+)"],
       "autoReplaceStringTemplate": "- Istio: {{newValue}}",
       "depNameTemplate": "base",
       "datasourceTemplate": "helm",
@@ -62,6 +43,11 @@
   ],
   "postUpgradeTasks": {
     "commands": [
+      // Sets chart version = appVersion + "-bb.0" on upstream bumps;
+      // increments -bb.N suffix on deps-only changes.
+      // Replaces the old regex-based version manager and avoids the
+      // minor-version-bump bug in bump-chart-yaml.
+      "match-chart-yaml-appversion",
       "regenerate-helm-docs",
       "bump-changelog '- {{{replace 'registry1.dso.mil/' '' depName}}} updated from {{{currentVersion}}} to {{{newVersion}}}'"
     ],
